testdata/baselines/reference/submodule/compiler/jsxNamespacePrefixIntrinsics.errors.txt
jsxNamespacePrefixIntrinsics.tsx(11,16): error TS2741: Property '"ns:attribute"' is missing in type '{}' but required in type '{ "ns:attribute": string; }'.
jsxNamespacePrefixIntrinsics.tsx(15,18): error TS2339: Property 'element' does not exist on type 'JSX.IntrinsicElements'.
jsxNamespacePrefixIntrinsics.tsx(16,30): error TS2322: Type '{ attribute: string; }' is not assignable to type '{ "ns:attribute": string; }'.
  Property 'attribute' does not exist on type '{ "ns:attribute": string; }'. Did you mean '"ns:attribute"'?
jsxNamespacePrefixIntrinsics.tsx(17,19): error TS2741: Property '"ns:attribute"' is missing in type '{}' but required in type '{ "ns:attribute": string; }'.


==== jsxNamespacePrefixIntrinsics.tsx (4 errors) ====
    declare namespace JSX {
      interface IntrinsicElements {
        "ns:element": {
          "ns:attribute": string;
        },
        "ns:NamespacedUpcaseAlsoIntrinsic": any,
        "NS:NamespacedUpcaseAlsoIntrinsic": any
      }
    }
    
    const valid = <ns:element ns:attribute="yep" />;
                   ~~~~~~~~~~
!!! error TS2741: Property '"ns:attribute"' is missing in type '{}' but required in type '{ "ns:attribute": string; }'.
!!! related TS2728 jsxNamespacePrefixIntrinsics.tsx:4:7: '"ns:attribute"' is declared here.
    const validUpcase1 = <ns:NamespacedUpcaseAlsoIntrinsic />;
    const validUpcase2 = <NS:NamespacedUpcaseAlsoIntrinsic />;
    
    const invalid1 = <element />;
                     ~~~~~~~~~~~
!!! error TS2339: Property 'element' does not exist on type 'JSX.IntrinsicElements'.
    const invalid2 = <ns:element attribute="nope" />;
                                 ~~~~~~~~~
!!! error TS2322: Type '{ attribute: string; }' is not assignable to type '{ "ns:attribute": string; }'.
!!! error TS2322:   Property 'attribute' does not exist on type '{ "ns:attribute": string; }'. Did you mean '"ns:attribute"'?
    const invalid3 = <ns:element ns:invalid="nope" />;
                      ~~~~~~~~~~
!!! error TS2741: Property '"ns:attribute"' is missing in type '{}' but required in type '{ "ns:attribute": string; }'.
!!! related TS2728 jsxNamespacePrefixIntrinsics.tsx:4:7: '"ns:attribute"' is declared here.
    